# ChangeLog for media-fonts/encodings
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-fonts/encodings/ChangeLog,v 1.71 2010/12/31 19:19:20 jer Exp $

  31 Dec 2010; Jeroen Roovers <jer@gentoo.org> encodings-1.0.4.ebuild:
  Stable for HPPA (bug #344827).

  29 Dec 2010; Markus Meier <maekke@gentoo.org> encodings-1.0.4.ebuild:
  arm stable, bug #344827

  25 Dec 2010; Christian Faulhammer <fauli@gentoo.org>
  encodings-1.0.4.ebuild:
  x86 stable, bug 

  23 Dec 2010; Samuli Suominen <ssuominen@gentoo.org> encodings-1.0.4.ebuild:
  amd64 stable wrt #344827

  19 Dec 2010; Samuli Suominen <ssuominen@gentoo.org> encodings-1.0.4.ebuild:
  ppc64 stable wrt #344827

*encodings-1.0.4 (17 Nov 2010)

  17 Nov 2010; Michał Górny <mgorny@gentoo.org> +encodings-1.0.4.ebuild:
  Version bump.

  21 Oct 2010; Tomáš Chvátal <scarabeus@gentoo.org>
  -encodings-1.0.3.ebuild:
  old

  21 Oct 2010; Brent Baude <ranger@gentoo.org> encodings-1.0.3-r1.ebuild:
  Marking encodings-1.0.3-r1 ppc stable for bug 239063

  19 Sep 2010; Raúl Porcel <armin76@gentoo.org> encodings-1.0.3-r1.ebuild:
  ia64/s390/sh/sparc stable wrt #327777

  12 Sep 2010; Tobias Klausmann <klausman@gentoo.org>
  encodings-1.0.3-r1.ebuild:
  Stable on alpha, bug #327777

  03 Aug 2010; Samuli Suominen <ssuominen@gentoo.org>
  encodings-1.0.3-r1.ebuild:
  ppc64 stable wrt #327777

  22 Jul 2010; Markus Meier <maekke@gentoo.org> encodings-1.0.3-r1.ebuild:
  arm stable, bug #327777

  14 Jul 2010; Jeroen Roovers <jer@gentoo.org> encodings-1.0.3-r1.ebuild:
  Stable for HPPA (bug #327777).

  14 Jul 2010; Jeroen Roovers <jer@gentoo.org> encodings-1.0.3-r1.ebuild:
  Stable for HPPA (bug #327777).

  13 Jul 2010; Christian Faulhammer <fauli@gentoo.org>
  encodings-1.0.3-r1.ebuild:
  x86 stable, bug 327777

  12 Jul 2010; Markos Chandras <hwoarang@gentoo.org>
  encodings-1.0.3-r1.ebuild:
  Stable on amd64 wrt bug #327777
