@@ -1,6 +1,9 @@
 # ChangeLog for media-fonts/encodings
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-fonts/encodings/ChangeLog,v 1.71 2010/12/31 19:19:20 jer Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-fonts/encodings/ChangeLog,v 1.72 2011/02/12 16:08:05 armin76 Exp $
+
+  12 Feb 2011; Raúl Porcel <armin76@gentoo.org> encodings-1.0.4.ebuild:
+  alpha/ia64/m68k/s390/sh/sparc stable wrt #344827
 
   31 Dec 2010; Jeroen Roovers <jer@gentoo.org> encodings-1.0.4.ebuild:
   Stable for HPPA (bug #344827).
